// ============================================================================
// File: messages.proto
// Git source: github.com/Zilliqa/Zilliqa-JavaScript-Library
// Git commit: 7d2e24d
// Date:  Nov 29, 2018
// Full path: https://github.com/Zilliqa/Zilliqa-JavaScript-Library/blob/7d2e24dcda7162a72423b3cf98fe108e40ec807a/packages/zilliqa-js-proto/src/messages.proto
// ============================================================================

syntax = "proto2";

// ============================================================================
// Primitives
// ============================================================================

message ByteArray
{
    required bytes data = 1;
}

message ProtoTransactionCoreInfo
{
    required uint32 version      = 1;
    required uint64 nonce        = 2;
    required bytes toaddr           = 3;
    required ByteArray senderpubkey = 4;
    required ByteArray amount       = 5;
    required ByteArray gasprice     = 6;
    required uint64 gaslimit     = 7;
    required bytes code             = 8;
    required bytes data             = 9;
}

message ProtoTransaction
{
    required bytes tranid                  = 1;
    required ProtoTransactionCoreInfo info = 2;
    required ByteArray signature           = 3;
}

message ProtoTransactionReceipt
{
    required bytes receipt    = 1;
    required uint64 cumgas = 2;
}

message ProtoTransactionWithReceipt
{
    required ProtoTransaction transaction    = 1;
    required ProtoTransactionReceipt receipt = 2;
}
